# ioda-converters

./: .gitattributes  .gitignore  .pycodestyle  .travis.yml  CMakeLists.txt  CPPLINT.cfg  Dockerfile  PackageConfig.cmake.in  README.md  bufr_ncep_prepbufr_adpupa_3test.yaml  buildspec_clang.yml  buildspec_gnu.yml  buildspec_intel.yml  ioda_envr1  printenv.py  setup.py
CI/: CMakeLists.txt  buildspec_clang.yml  buildspec_gnu.yml  buildspec_intel.yml  cdash-url.sh  clone.sh
CI/cmake/: CTestConfig.cmake  CTestCustom.ctest.in  cdash-integration.cmake
doc/: CMakeLists.txt  index.rst
doc/bufr/: CMakeLists.txt  bufr.rst  index.rst  overview.rst  python_api.rst  query_language.rst  software_architecture.rst  target_identification.rst  yaml.rst
doc/bufr_obs_samples/: 1bamua.bufr.subset.txt  adpupa.bufr.subset.txt  adpupa.prepbufr.subset.txt  aircraft.bufr.subset.txt  aircraft.prepbufr.subset.txt  airep_bufr_sample.txt  buoy_bufr_sample.txt  gnssro_bufr_sample.txt  rass_bufr_sample.txt  sonde_bufr_sample.txt  vadwinds_bufr_sample.txt
doc/bufr_table_samples/: NCEP_NC021XXX_NormalFeed_Radiance_BUFRTable.txt  adpsfc.nc000000.bufr.table.txt  adpsfc.nc000001.bufr.table.txt  adpsfc.nc000002.bufr.table.txt  adpsfc.nc000007.bufr.table.txt  adpsfc.nc000010.bufr.table.txt  adpsfc.nc000011.bufr.table.txt  adpsfc.nc000020.bufr.table.txt  adpsfc.nc000100.bufr.table.txt  adpsfc.nc000101.bufr.table.txt  adpsfc.nc000102.bufr.table.txt  adpupa.bufr.table.txt  adpupa.nc002001.bufr.table.txt  adpupa.nc002004.bufr.table.txt  adpupa.nc002005.bufr.table.txt  adpupa.nc002101.bufr.table.txt  adpupa.nc002102.bufr.table.txt  adpupa.nc002103.bufr.table.txt  adpupa.nc002105.bufr.table.txt  adpupa.nc004005.bufr.table.txt  aircft.nc004002.bufr.table.txt  aircft.nc004003.bufr.table.txt  aircft.nc004004.bufr.table.txt  aircft.nc004006.bufr.table.txt  aircft.nc004010.bufr.table.txt  aircft.nc004103.bufr.table.txt  aircraft.prepbufr.table.txt  airep_bufr_mnemonics.txt  buoy_bufr_mnemonics.txt  gnssro_bufr_mnemonics.txt  gpsro.bufr.table.txt  mesonet.nc255001.bufr.table.txt  mesonet.nc255101.bufr.table.txt  mesonet.nc255111.bufr.table.txt  mesonet.nc255131.bufr.table.txt  mesonet.nc255161.bufr.table.txt  rass_bufr_mnemonics.txt  satellite_AMSUA_mnemonics.txt  satellite_ATMS_mnemonics.txt  satellite_AVHRR_mnemonics.txt  (+13 more)
doc/bufr_uml/: BigPictureSeq.puml  CreateQuerySet.puml  DataCollection.puml  QueryClassDiagram.puml  Tokenizer.puml
doc/fix/: ghcn-stations.txt
src/: CMakeLists.txt  __init__.py  bufr2nc.py  bufr2ncCommon.py  bufr2ncConfig.py  bufr2ncObsTypes.py  cat_nc_files.py  generic_ob2ioda.py  gpsbufr2nc.py  imsfv3grid_scf2ioda.py  jedi_bufr2nc.py  merge_nc.py  odbapi2nc.py  prep_nc_files.py  select_nc_obs.py
src/ODB2/: .pycodestyle  CMakeLists.txt  odbapi2json.py  odbapi2json.py.in  odbapi2nc.py  odbapi2nc.py.in  var_convert.py
src/acftbias/: CMakeLists.txt  GsiAircraftBiasConverter.cc  GsiAircraftBiasReader.cc  GsiAircraftBiasReader.h  generate_aircraft_bias_csv.py
src/amv/: 2021080103_Australia.nc4  decode_ascii_amv.py
src/bufr/: CMakeLists.txt  CPPLINT.cfg  DataContainer.cpp  DataContainer.h  DataObject.cpp  DataObject.h  EigenExt.h  IngesterData.cpp  IngesterData.h  IngesterTypes.h  ObjectFactory.h  Parser.h  ParserFactory.h  README.md  bufr2ioda.cpp  bufr2ioda_func.cpp  bufr2ioda_func.h  main.cpp  python_bindings.cpp  test_ingester.cpp  test_ingester.yaml
src/chem/: CMakeLists.txt  README.md  `  aeronet_aaod2ioda.py  aeronet_aod2ioda.py  airnow2ioda-nc.py  airnow2ioda-v2.py  modis_aod2ioda.py  monet_aeronet2ioda  monet_aeronet2ioda.py  mopitt_co_nc2ioda.py  tropomi_no2_nc2ioda.py  tropomi_no2_nc2ioda.py.in  viirs_aod2ioda.py  viirs_aod2ioda.py.in
src/compo/: CMakeLists.txt  VIIRS_BiasWriter.py  aeronet_aaod2ioda.py  aeronet_aod2ioda.py  airnow2ioda-nc.py  airnow2ioda_nc.py  calipso_hdf4_2ioda.py  calipso_l1_bcksct_hdf4_2ioda.py  calipso_l2_hdf4_2ioda.py  gcas_nc2ioda.py  icartt_nc2ioda.py  mls_o3_nc2ioda.py  modis_aod2ioda.py  mopitt_co_nc2ioda.py  omi_o3_nc2ioda.py  omps_o3_nm_h52ioda.py  ompsnm_o3_nc2ioda.py  openaq_csv2ioda.py  pandora_2ioda.py  tempo_nc2ioda.py  tropess_co_nc2ioda.py  tropomi_co_nc2ioda.py  tropomi_no2_co_nc2ioda.py  tropomi_no2_nc2ioda.py  viirs_aod2ioda.py  viirs_biaswriter.py  viirs_l1b2ioda.py  viirs_l1bnc2ioda.py
src/conventional/: 20220315.15.Australia.AllWindsQIText  20220315.15.EuropeAfrica.AllWindsQIText  20220315.15.Indian.AllWindsQIText  20220315.15.NWPacific.AllWindsQIText  20220315.15.SEPacific.AllWindsQIText  CMakeLists.txt  aircraft_bufr2ioda.py  amdar_bufr2ioda.py  amv_nesdis_ascii2ioda.py  amv_ssec_ascii2ioda.py  balloonSonde_json2ioda.py  balloon_sonde_json2ioda.py  buoy_bufr2ioda.py  decode_bufr_LDM_raob.py  def_jedi_utils.py  ionosonde_ascii2ioda.py  metar_csv2ioda.py  metar_csv2ioda.py.in  ship_bufr2ioda.py  sonde_bufr2ioda.py  sonde_tac2ioda.py  synop_bufr2ioda.py  windborne_json2ioda.py  windes.nc
src/generic/: generic_ob2ioda.py
src/giirs/: README  giirs_nc2ioda.py  planck.py
src/gnssro/: CMakeLists.txt  README  gnss_tec_bufr2ioda.py  gnssaro_netcdf2ioda.py  gnssro_AWSopenROdata2ioda.py  gnssro_AWSopendataNetcdf2ioda.py  gnssro_bufr2ioda.f90  gnssro_bufr2ioda.py  gnssro_bufr2ioda2.f90  gnssro_bufr2ioda_generic.f90  gnssro_gsidiag2ioda.f90
src/gnssro-fortran/: gnssro_obs_bufr2nc.f90
src/goes/: CMakeLists.txt  goes.py  goes16.py  goes16_converter.py  goes16_converter.sh  goes16_lat_lon.py  goes16_lat_lon.sh  goes16_latlon.py  goes16_to_iodav2.py  goes16_to_iodav2_lat_lon_creator.py  goes_converter.py  goes_latlon.py  goes_util.py  test_goes16_converter.py  test_goes16_to_iodav2.sh  test_goes16_to_iodav2_lat_lon_creator.sh  test_goes_converter.py
src/gsi-ncdiag/: CMakeLists.txt  README  README.md  aod_dicts.py  combine_conv.py  combine_conv.py.in  combine_files.py  combine_geoval.py.in  combine_obsspace.py  composition.py  conv.py  conv_dicts.py  gsi_ncdiag.py  list_sid_raob.py  merge_conv.py  orddicts.py  test.py  (+19 more)
tools/: CMakeLists.txt  bufrtest.py  build_gsi_nc_files.sh  iodaconv_comp.sh  iodaconv_cpplint.py  iodaconv_lint.sh  lint.sh
(+1665 files in other folders)
