if( bufr_FOUND AND NetCDF_Fortran_FOUND )
    set(iodaconv_gnssro_ENABLED True)
    message(STATUS "Found: bufr")
    message(STATUS "Found: NetCDF::NetCDF_Fortran")
    message(STATUS "Enabled Component: gnssro")
else()
    set(iodaconv_gnssro_ENABLED False)
    if(NOT bufr_FOUND)
        message(STATUS "NOT-Found: bufr - GNSSRO converter disabled")
    endif()
    if(NOT NetCDF_Fortran_FOUND)
        message(STATUS "NOT-Found: NetCDF - GNSSRO converter disabled")
    endif()
    message(STATUS "Disabled Component: gnssro")
endif()

if( eckit_FOUND AND oops_FOUND AND ioda_engines_FOUND AND bufr_FOUND )
    set(iodaconv_bufr_ENABLED TRUE CACHE INTERNAL "")
    message(STATUS "Found: eckit")
    message(STATUS "Found: oops")
    message(STATUS "Found: ioda_engines")
    message(STATUS "Found: bufr")
    message(STATUS "Enabled Component: bufr")
else()
    set(iodaconv_bufr_ENABLED False)
    if(NOT eckit_FOUND)
        message(STATUS "NOT-Found: eckit - BUFR converter disabled")
    endif()
    if(NOT oops_FOUND)
        message(STATUS "NOT-Found: oops - BUFR converter disabled")
    endif()
    if(NOT ioda_engines_FOUND)
        message(STATUS "NOT-Found: ioda_engines - BUFR converter disabled")
    endif()
    if(NOT bufr_FOUND)
        message(STATUS "NOT-Found: bufr - BUFR converter disabled")
    endif()
    message(STATUS "Disabled Component: bufr")
endif()

add_subdirectory(chem)
add_subdirectory(gsi-ncdiag)
add_subdirectory(lib-python)
add_subdirectory(marine)
add_subdirectory(ncep)
add_subdirectory(ssec)
add_subdirectory(wrfda-ncdiag)

# Optional components
if(iodaconv_gnssro_ENABLED)
    add_subdirectory(gnssro)
endif()

if(iodaconv_bufr_ENABLED)
  add_subdirectory(bufr)
endif()
